# GatewayPi

./: .flake8  .gitignore  GatewayPi.spec  README.md  gateway.py  install.sh  networking.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: build.yml  test.yml
src/MeticulousGatewayPi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gateway/: __init__.py  machine.py  main.py  networking.py  tests.py
